# Starboy

./: .gitignore  CMakeLists.txt  README.md  release_notes_v0.1.1.md
scripts/: build_and_run.ps1  install_vs_and_run_vcpkg.ps1
src/: main.cpp
